1c-bonus-b/6_alb_security_group.tf
resource "aws_security_group" "alb_sg" {
  name        = "tetsuzai-alb-sg"
  description = "ALB security group for tetsuzai app"
  vpc_id      = local.vpc_id

  # Allow HTTP from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow HTTPS from anywhere
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Allow outbound traffic to EC2 on app port
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "tetsuzai-alb-sg"
  }
}

# resource "aws_security_group_rule" "alb_to_ec2" {
#   type                     = "ingress"
#   from_port                = var.app_port
#   to_port                  = var.app_port
#   protocol                 = "tcp"
#   security_group_id        = aws_security_group.ec2_sg.id
#   source_security_group_id = aws_security_group.alb_sg.id
# }

# resource "aws_security_group_rule" "ec2_to_alb" {
#   type                     = "egress"
#   from_port                = var.app_port
#   to_port                  = var.app_port
#   protocol                 = "tcp"
#   security_group_id        = aws_security_group.ec2_sg.id
#   source_security_group_id = aws_security_group.alb_sg.id
# }
